Práctica 3/gramaticas/GParser.java
// Generated from GParser.g4 by ANTLR 4.7.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		KEYWORD_FUNCTION=1, KEYWORD_BEGIN=2, KEYWORD_END=3, KEYWORD_WHILE=4, KEYWORD_INCLUDE=5, 
		KEYWORD_IF=6, KEYWORD_ELSE=7, KEYWORD_THEN=8, KEYWORD_ENDIF=9, KEYWORD_FOR=10, 
		KEYWORD_FROM=11, KEYWORD_TO=12, KEYWORD_DO=13, KEYWORD_ENDDO=14, KEYWORD_STEP=15, 
		KEYWORD_RETURN=16, TRUE=17, FALSE=18, VOID=19, NUMERO=20, CADENA=21, BOOLEANO=22, 
		ENTERO=23, FLOTANTE=24, IDENTIFICADOR=25, PI=26, PD=27, FIN=28, COMA=29, 
		DOS_PUNTOS=30, CD=31, CI=32, ASIGNACION=33, MENOR_QUE=34, MAYOR_QUE=35, 
		IGUAL_QUE=36, DISTINTO_QUE=37, SUMA=38, GUIONBAJO=39, AND=40, OR=41, NOT=42, 
		MULT=43, COMENTARIO_LINEA=44, COMENTARIO_BLOQUE=45, CADENA_CARACTERES=46, 
		WS=47;
	public static final int
		RULE_prog = 0, RULE_pr_function = 1, RULE_pr_begin = 2, RULE_pr_end = 3, 
		RULE_pr_include = 4, RULE_pr_while = 5, RULE_pr_if = 6, RULE_pr_else = 7, 
		RULE_pr_then = 8, RULE_pr_endif = 9, RULE_pr_for = 10, RULE_pr_from = 11, 
		RULE_pr_to = 12, RULE_pr_do = 13, RULE_pr_enddo = 14, RULE_pr_step = 15, 
		RULE_pr_return = 16, RULE_palabra_reservada = 17, RULE_op_menor = 18, 
		RULE_op_mayor = 19, RULE_op_igual = 20, RULE_op_distinto = 21, RULE_and = 22, 
		RULE_or = 23, RULE_not = 24, RULE_condicion_logica = 25, RULE_comparacion = 26, 
		RULE_operador = 27, RULE_num = 28, RULE_identificador = 29, RULE_fin = 30, 
		RULE_coma = 31, RULE_dos_puntos = 32, RULE_parentesis_izquierdo = 33, 
		RULE_parentesis_derecho = 34, RULE_op_asignacion = 35, RULE_op_suma = 36, 
		RULE_op_mult = 37, RULE_corchete_izquierdo = 38, RULE_corchete_derecho = 39, 
		RULE_signo_puntuacion = 40, RULE_parametros_bucle = 41, RULE_parametros_DF = 42, 
		RULE_parametros_LF = 43, RULE_parametros = 44, RULE_include = 45, RULE_libreria = 46, 
		RULE_if_else = 47, RULE_cabecera_if = 48, RULE_cuerpo_if = 49, RULE_cabecera_else = 50, 
		RULE_cuerpo_else = 51, RULE_funcion = 52, RULE_cabecerafuncion = 53, RULE_cuerpofuncion = 54, 
		RULE_declaracionfuncion = 55, RULE_retornoFuncion = 56, RULE_llamadafuncion = 57, 
		RULE_nombrefuncion = 58, RULE_tipodedatos = 59, RULE_declaracionVariable = 60, 
		RULE_asignacion = 61, RULE_concatenacion = 62, RULE_multiplicacion = 63, 
		RULE_op_return = 64, RULE_bucle_while = 65, RULE_cabecerawhile = 66, RULE_cuerpowhile = 67, 
		RULE_bucle_for = 68, RULE_for_cabecera = 69, RULE_for_cuerpo = 70, RULE_array = 71, 
		RULE_cuerpoArray = 72, RULE_declaracionArray = 73, RULE_var = 74;
	private static String[] makeRuleNames() {
		return new String[] {
			"prog", "pr_function", "pr_begin", "pr_end", "pr_include", "pr_while", 
			"pr_if", "pr_else", "pr_then", "pr_endif", "pr_for", "pr_from", "pr_to", 
			"pr_do", "pr_enddo", "pr_step", "pr_return", "palabra_reservada", "op_menor", 
			"op_mayor", "op_igual", "op_distinto", "and", "or", "not", "condicion_logica", 
			"comparacion", "operador", "num", "identificador", "fin", "coma", "dos_puntos", 
			"parentesis_izquierdo", "parentesis_derecho", "op_asignacion", "op_suma", 
			"op_mult", "corchete_izquierdo", "corchete_derecho", "signo_puntuacion", 
			"parametros_bucle", "parametros_DF", "parametros_LF", "parametros", "include", 
			"libreria", "if_else", "cabecera_if", "cuerpo_if", "cabecera_else", "cuerpo_else", 
			"funcion", "cabecerafuncion", "cuerpofuncion", "declaracionfuncion", 
			"retornoFuncion", "llamadafuncion", "nombrefuncion", "tipodedatos", "declaracionVariable", 
			"asignacion", "concatenacion", "multiplicacion", "op_return", "bucle_while", 
			"cabecerawhile", "cuerpowhile", "bucle_for", "for_cabecera", "for_cuerpo", 
			"array", "cuerpoArray", "declaracionArray", "var"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'function'", "'begin'", "'end'", "'while'", "'include'", "'if'", 
			"'else'", "'then'", "'endif'", "'for'", "'from'", "'to'", "'do'", "'enddo'", 
			"'step'", "'return'", "'true'", "'false'", "'void'", "'numero'", "'cadena'", 
			"'booleano'", null, null, null, "'('", "')'", "';'", "','", "':'", "']'", 
			"'['", "':='", "'<'", "'>'", "'=='", "'!='", "'+'", "'_'", "'&&'", "'||'", 
			"'!'", "'*'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "KEYWORD_FUNCTION", "KEYWORD_BEGIN", "KEYWORD_END", "KEYWORD_WHILE", 
			"KEYWORD_INCLUDE", "KEYWORD_IF", "KEYWORD_ELSE", "KEYWORD_THEN", "KEYWORD_ENDIF", 
			"KEYWORD_FOR", "KEYWORD_FROM", "KEYWORD_TO", "KEYWORD_DO", "KEYWORD_ENDDO", 
			"KEYWORD_STEP", "KEYWORD_RETURN", "TRUE", "FALSE", "VOID", "NUMERO", 
			"CADENA", "BOOLEANO", "ENTERO", "FLOTANTE", "IDENTIFICADOR", "PI", "PD", 
			"FIN", "COMA", "DOS_PUNTOS", "CD", "CI", "ASIGNACION", "MENOR_QUE", "MAYOR_QUE", 
			"IGUAL_QUE", "DISTINTO_QUE", "SUMA", "GUIONBAJO", "AND", "OR", "NOT", 
			"MULT", "COMENTARIO_LINEA", "COMENTARIO_BLOQUE", "CADENA_CARACTERES", 
			"WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "GParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public GParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgContext extends ParserRuleContext {
		public List<IncludeContext> include() {
			return getRuleContexts(IncludeContext.class);
		}
		public IncludeContext include(int i) {
			return getRuleContext(IncludeContext.class,i);
		}
		public List<FuncionContext> funcion() {
			return getRuleContexts(FuncionContext.class);
		}
		public FuncionContext funcion(int i) {
			return getRuleContext(FuncionContext.class,i);
		}
		public ProgContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_prog; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterProg(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitProg(this);
		}
	}

	public final ProgContext prog() throws RecognitionException {
		ProgContext _localctx = new ProgContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_prog);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(153);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KEYWORD_INCLUDE) {
				{
				{
				setState(150);
				include();
				}
				}
				setState(155);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(159);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==KEYWORD_FUNCTION) {
				{
				{
				setState(156);
				funcion();
				}
				}
				setState(161);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_functionContext extends ParserRuleContext {
		public TerminalNode KEYWORD_FUNCTION() { return getToken(GParser.KEYWORD_FUNCTION, 0); }
		public Pr_functionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterPr_function(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitPr_function(this);
		}
	}

	public final Pr_functionContext pr_function() throws RecognitionException {
		Pr_functionContext _localctx = new Pr_functionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_pr_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(162);
			match(KEYWORD_FUNCTION);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_beginContext extends ParserRuleContext {
		public TerminalNode KEYWORD_BEGIN() { return getToken(GParser.KEYWORD_BEGIN, 0); }
		public Pr_beginContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_begin; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterPr_begin(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitPr_begin(this);
		}
	}

	public final Pr_beginContext pr_begin() throws RecognitionException {
		Pr_beginContext _localctx = new Pr_beginContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_pr_begin);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(164);
			match(KEYWORD_BEGIN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_endContext extends ParserRuleContext {
		public TerminalNode KEYWORD_END() { return getToken(GParser.KEYWORD_END, 0); }
		public Pr_endContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_end; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterPr_end(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitPr_end(this);
		}
	}

	public final Pr_endContext pr_end() throws RecognitionException {
		Pr_endContext _localctx = new Pr_endContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_pr_end);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(166);
			match(KEYWORD_END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_includeContext extends ParserRuleContext {
		public TerminalNode KEYWORD_INCLUDE() { return getToken(GParser.KEYWORD_INCLUDE, 0); }
		public Pr_includeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_include; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterPr_include(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitPr_include(this);
		}
	}

	public final Pr_includeContext pr_include() throws RecognitionException {
		Pr_includeContext _localctx = new Pr_includeContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_pr_include);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(168);
			match(KEYWORD_INCLUDE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_whileContext extends ParserRuleContext {
		public TerminalNode KEYWORD_WHILE() { return getToken(GParser.KEYWORD_WHILE, 0); }
		public Pr_whileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_while; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterPr_while(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitPr_while(this);
		}
	}

	public final Pr_whileContext pr_while() throws RecognitionException {
		Pr_whileContext _localctx = new Pr_whileContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_pr_while);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(170);
			match(KEYWORD_WHILE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_ifContext extends ParserRuleContext {
		public TerminalNode KEYWORD_IF() { return getToken(GParser.KEYWORD_IF, 0); }
		public Pr_ifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_if; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterPr_if(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitPr_if(this);
		}
	}

	public final Pr_ifContext pr_if() throws RecognitionException {
		Pr_ifContext _localctx = new Pr_ifContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_pr_if);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(172);
			match(KEYWORD_IF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_elseContext extends ParserRuleContext {
		public TerminalNode KEYWORD_ELSE() { return getToken(GParser.KEYWORD_ELSE, 0); }
		public Pr_elseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_else; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterPr_else(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitPr_else(this);
		}
	}

	public final Pr_elseContext pr_else() throws RecognitionException {
		Pr_elseContext _localctx = new Pr_elseContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_pr_else);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(174);
			match(KEYWORD_ELSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_thenContext extends ParserRuleContext {
		public TerminalNode KEYWORD_THEN() { return getToken(GParser.KEYWORD_THEN, 0); }
		public Pr_thenContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_then; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterPr_then(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitPr_then(this);
		}
	}

	public final Pr_thenContext pr_then() throws RecognitionException {
		Pr_thenContext _localctx = new Pr_thenContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_pr_then);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176);
			match(KEYWORD_THEN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_endifContext extends ParserRuleContext {
		public TerminalNode KEYWORD_ENDIF() { return getToken(GParser.KEYWORD_ENDIF, 0); }
		public Pr_endifContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_endif; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterPr_endif(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitPr_endif(this);
		}
	}

	public final Pr_endifContext pr_endif() throws RecognitionException {
		Pr_endifContext _localctx = new Pr_endifContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_pr_endif);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			match(KEYWORD_ENDIF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_forContext extends ParserRuleContext {
		public TerminalNode KEYWORD_FOR() { return getToken(GParser.KEYWORD_FOR, 0); }
		public Pr_forContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_for; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterPr_for(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitPr_for(this);
		}
	}

	public final Pr_forContext pr_for() throws RecognitionException {
		Pr_forContext _localctx = new Pr_forContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_pr_for);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(180);
			match(KEYWORD_FOR);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_fromContext extends ParserRuleContext {
		public TerminalNode KEYWORD_FROM() { return getToken(GParser.KEYWORD_FROM, 0); }
		public Pr_fromContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_from; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterPr_from(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitPr_from(this);
		}
	}

	public final Pr_fromContext pr_from() throws RecognitionException {
		Pr_fromContext _localctx = new Pr_fromContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_pr_from);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(182);
			match(KEYWORD_FROM);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_toContext extends ParserRuleContext {
		public TerminalNode KEYWORD_TO() { return getToken(GParser.KEYWORD_TO, 0); }
		public Pr_toContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_to; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterPr_to(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitPr_to(this);
		}
	}

	public final Pr_toContext pr_to() throws RecognitionException {
		Pr_toContext _localctx = new Pr_toContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_pr_to);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(184);
			match(KEYWORD_TO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_doContext extends ParserRuleContext {
		public TerminalNode KEYWORD_DO() { return getToken(GParser.KEYWORD_DO, 0); }
		public Pr_doContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_do; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterPr_do(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitPr_do(this);
		}
	}

	public final Pr_doContext pr_do() throws RecognitionException {
		Pr_doContext _localctx = new Pr_doContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_pr_do);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(186);
			match(KEYWORD_DO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_enddoContext extends ParserRuleContext {
		public TerminalNode KEYWORD_ENDDO() { return getToken(GParser.KEYWORD_ENDDO, 0); }
		public Pr_enddoContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_enddo; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterPr_enddo(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitPr_enddo(this);
		}
	}

	public final Pr_enddoContext pr_enddo() throws RecognitionException {
		Pr_enddoContext _localctx = new Pr_enddoContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_pr_enddo);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(188);
			match(KEYWORD_ENDDO);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_stepContext extends ParserRuleContext {
		public TerminalNode KEYWORD_STEP() { return getToken(GParser.KEYWORD_STEP, 0); }
		public Pr_stepContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_step; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).enterPr_step(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof GParserListener ) ((GParserListener)listener).exitPr_step(this);
		}
	}

	public final Pr_stepContext pr_step() throws RecognitionException {
		Pr_stepContext _localctx = new Pr_stepContext(_ctx, getState());
		enterRule(_localctx, 30, RULE_pr_step);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(190);
			match(KEYWORD_STEP);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Pr_returnContext extends ParserRuleContext {
		public TerminalNode KEYWORD_RETURN() { return getToken(GParser.KEYWORD_RETURN, 0); }
		public Pr_returnContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pr_return; }
		@Override
		public void enterRule(ParseTreeListener listener) {
